{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 24,
  "lineage": "120f0901-bc66-1b8c-9a8d-4ac70fd7585b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27f13d7f2fa68ea",
            "association_id": "eipassoc-084d1a9ed2dd63e85",
            "domain": "vpc",
            "id": "eipalloc-0d27f13d7f2fa68ea",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a76cdd14be18a2a9",
            "private_dns": "ip-10-0-0-58.ec2.internal",
            "private_ip": "10.0.0.58",
            "public_dns": "ec2-100-24-247-201.compute-1.amazonaws.com",
            "public_ip": "100.24.247.201",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:761371183724:instance/i-080bcdd8dbd3be255",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080bcdd8dbd3be255",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0837f21b60280e392",
            "private_dns": "ip-10-0-0-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.48",
            "public_ip": "54.80.118.25",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08cf91fa525d5d22d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f1d620456c78025",
            "tags": {
              "Name": "pub-apache-bastion"
            },
            "tags_all": {
              "Name": "pub-apache-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083ccceed8644e558"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-pub",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pvt-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e076d5c9e040974",
            "arn": "arn:aws:ec2:us-east-1:761371183724:instance/i-0f01aa96e5d556632",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f01aa96e5d556632",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f57e40f494a7ac76",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08e88a7b31c653da6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f44b23f75f825e1f",
            "tags": {
              "Name": "pvt-apache-bastion"
            },
            "tags_all": {
              "Name": "pvt-apache-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e12cda62b237075"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-pvt",
            "aws_subnet.subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:internet-gateway/igw-0e150670972f6c614",
            "id": "igw-0e150670972f6c614",
            "owner_id": "761371183724",
            "tags": {
              "Name": "igw-bastion"
            },
            "tags_all": {
              "Name": "igw-bastion"
            },
            "vpc_id": "vpc-074928ff144e6d0cd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27f13d7f2fa68ea",
            "association_id": "eipassoc-084d1a9ed2dd63e85",
            "connectivity_type": "public",
            "id": "nat-070055dd6e0069080",
            "network_interface_id": "eni-0a76cdd14be18a2a9",
            "private_ip": "10.0.0.58",
            "public_ip": "100.24.247.201",
            "subnet_id": "subnet-02f1d620456c78025",
            "tags": {
              "Name": "nat-bastion"
            },
            "tags_all": {
              "Name": "nat-bastion"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09bf21f60e2f19aad1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-070055dd6e0069080",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09bf21f60e2f19aad",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private-route-table",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:route-table/rtb-09bf21f60e2f19aad",
            "id": "rtb-09bf21f60e2f19aad",
            "owner_id": "761371183724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-070055dd6e0069080",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-bastion"
            },
            "tags_all": {
              "Name": "private-route-table-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-074928ff144e6d0cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:route-table/rtb-0dc1e1d495a42869b",
            "id": "rtb-0dc1e1d495a42869b",
            "owner_id": "761371183724",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e150670972f6c614",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table-bastion"
            },
            "tags_all": {
              "Name": "public-route-table-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-074928ff144e6d0cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9aef6f2726b9a6b",
            "route_table_id": "rtb-0dc1e1d495a42869b",
            "subnet_id": "subnet-02f1d620456c78025"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-route-table",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e177a4047f0631c",
            "route_table_id": "rtb-09bf21f60e2f19aad",
            "subnet_id": "subnet-0f44b23f75f825e1f"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:security-group/sg-083ccceed8644e558",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083ccceed8644e558",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTP connections",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming HTTPS connections",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming SSH connections",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230707220323103600000002",
            "name_prefix": "terraform-",
            "owner_id": "761371183724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-pub-bastion"
            },
            "tags_all": {
              "Name": "sg-pub-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-074928ff144e6d0cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:security-group/sg-06e12cda62b237075",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e12cda62b237075",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20230707220323098300000001",
            "name_prefix": "terraform-",
            "owner_id": "761371183724",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-pvt-bastion"
            },
            "tags_all": {
              "Name": "sg-pvt-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-074928ff144e6d0cd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:subnet/subnet-0f44b23f75f825e1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44b23f75f825e1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761371183724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-bastion"
            },
            "tags_all": {
              "Name": "private-subnet-bastion"
            },
            "vpc_id": "vpc-074928ff144e6d0cd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:subnet/subnet-02f1d620456c78025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f1d620456c78025",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "761371183724",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-bastion"
            },
            "tags_all": {
              "Name": "public-subnet-bastion"
            },
            "vpc_id": "vpc-074928ff144e6d0cd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:761371183724:vpc/vpc-074928ff144e6d0cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cc2ac2a23ca316c",
            "default_route_table_id": "rtb-06c418700bc1ff6c0",
            "default_security_group_id": "sg-0678aeb9da2be5528",
            "dhcp_options_id": "dopt-011f9119938e2ca54",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074928ff144e6d0cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c418700bc1ff6c0",
            "owner_id": "761371183724",
            "tags": {
              "Name": "tf-bastion"
            },
            "tags_all": {
              "Name": "tf-bastion"
            }
          }
        }
      ]
    }
  ]
}